fix team-card flex alignments

--- a/assets/css/_team.css
+++ b/assets/css/_team.css
@@ -42,7 +42,7 @@
   transition: box-shadow 0.3s ease-in-out;
 }
 .team-container .team-right .team-card:hover {
-  box-shadow: 0px 6px 16px 0px #000000, 0px 8px 0px -15px rgba(0,0,0,0.5);
+  box-shadow: 0px 6px 16px 0px #000000, 0px 8px 0px -15px rgba(0, 0, 0, 0.5);
 }
 .team-container .team-right .team-card .team-card-header {
   height: auto;
@@ -74,25 +74,41 @@
   letter-spacing: 1px;
   color: #969292;
 }
-@media screen and (max-width: 920px) {
-  .team-container .team-right .team-card .team-card-header figcaption h3 {
-    font-size: 16px;
-    text-align: center;
-  }
-}
-@media screen and (max-width: 880px) {
+@media screen and (max-width: 1000px) {
   .team-container {
     flex-direction: column;
   }
   .team-container .team-left {
-    width: 90%;
+    width: 100%;
+    min-height: 200px;
   }
   .team-container .team-right {
-    width: 90%;
-    margin-left: 0;
+    width: 100%;
+    margin: 0;
+  }
+  .team-container .team-right .team-card {
+    width: 35%;
   }
 }
-@media screen and (max-width: 730px) {
+@media screen and (max-width: 720px) {
+  .team-container .team-right {
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    gap: 10px;
+  }
+  .team-container .team-right .team-card {
+    width: 42%;
+  }
+}
+@media screen and (max-width: 560px) {
+  .team-container .team-right {
+    justify-content: center;
+  }
+  .team-container .team-right .team-card  {
+    width: 50%;
+  }
+} 
+/* @media screen and (max-width: 730px) {
   .team-container .team-right .team-card .team-card-header figcaption h3 {
     font-size: 10px;
   }
@@ -113,11 +129,4 @@
     font-size: 14px;
   }
 }
-@media screen and (max-width: 560px) {
-  .team-container .team-right .team-card .team-card-body h3 {
-    font-size: 11px;
-  }
-  .team-container .team-right .team-card .team-card-body h6{
-    font-size: 10px;
-  }
-}
+
